[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cnstockgpt"
version = "0.1.0"
description = "A股多因子选股"
authors = [{name = "Franklin", email = "franklin@example.com"}]
readme = "readme.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "pandas>=1.3",
    "numpy>=1.21",
    "akshare>=1.3",
    "scipy>=1.7",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[tool.setuptools]
packages = ["factor"]